--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="box">
             <div class="year_company">
               <h5>2022 - 2023</h5>
-              <h5>Curt Of Justice <br />Of The <br />European Union</h5>
+              <h5>Court Of Justice <br />Of The <br />European Union</h5>
             </div>
             <div class="text">
               <h4>Administrative Assistant</h4>
