--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </ul>
         </div>
         <div class="certifications">
-          <h3 class="title">certifications</h3>
+          <h3 class="title">Certifications</h3>
 
           <ul>
             <li>
