--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="imgBx">
             <img src="image/Slato.jpg" alt="Slato Hamid" />
           </div>
-          <h2>Hamid Slato<br /><span>Future Web Developer</span></h2>
+          <h2>Hamid Slato<br /><span>Web Developer</span></h2>
         </div>
         <div class="contactInfo">
           <h3 class="title">Contact Info</h3>
