--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <body>
     <div class="container">
       <div class="left_Side">
-        <div class="profileText">
+        <article class="profileText">
           <div class="imgBx">
             <img src="image/Slato.jpg" alt="Slato Hamid" />
           </div>
           <h2>Hamid Slato<br /><span>Web Developer</span></h2>
-        </div>
-        <div class="contactInfo">
+        </article>
+        <article class="contactInfo">
           <h3 class="title">Contact Info</h3>
 
           <ul>
@@ -70,9 +70,9 @@
               <span class="text">Brussels, Belgium</span>
             </li>
           </ul>
-        </div>
+        </article>
 
-        <div class="contactInfo education">
+        <article class="contactInfo education">
           <h3 class="title">Education</h3>
           <ul>
             <li>
@@ -85,8 +85,8 @@
             </li>
             <li></li>
           </ul>
-        </div>
-        <div class="contactInfo language">
+        </article>
+        <article class="contactInfo language">
           <h3 class="title">Languages</h3>
           <ul>
             <li>
@@ -108,8 +108,8 @@
               </span>
             </li>
           </ul>
-        </div>
-        <div class="certifications">
+        </article>
+        <article class="certifications">
           <h3 class="title">Certifications</h3>
 
           <ul>
@@ -129,11 +129,11 @@
               <span class="text">ITIL® 2011 Foundation </span>
             </li>
           </ul>
-        </div>
+        </article>
       </div>
 
       <div class="right_Side">
-        <div class="about">
+        <section class="about">
           <h2 class="title2">Profile</h2>
           <p>
             Hello, I'm <b>Hamid Slato</b>, a trainee at <b>BeCode</b>, on the
@@ -144,8 +144,8 @@
             more enjoyable and interesting career. And what's more interesting
             than web development?
           </p>
-        </div>
-        <div class="about">
+        </section>
+        <section class="about">
           <h2 class="title2">Experience</h2>
           <div class="box">
             <div class="year_company">
@@ -205,8 +205,8 @@
               </p>
             </div>
           </div>
-        </div>
-        <div class="about skills">
+        </section>
+        <section class="about skills">
           <h2 class="title2">Web development trainings and progress</h2>
           <div class="box">
             <a
@@ -236,8 +236,8 @@
 
             <div class="percent"><div style="width: 50%"></div></div>
           </div>
-        </div>
-        <div class="about interest">
+        </section>
+        <section class="about interest">
           <h2 class="title2">Interest</h2>
           <ul>
             <li>
@@ -249,7 +249,7 @@
               <i class="fa fa-futbol-o" aria-hidden="true"></i>Playing Football
             </li>
           </ul>
-        </div>
+        </section>
       </div>
     </div>
   </body>
